# metalgpy

./: README.md  setup.cfg  setup.py
examples/: addition-example.py  addition.py  basic-example.py  example-invariant-metalgpy.py  example-optimization.py  function.py
examples/autotuning/: hepnos.py
examples/keras/: keras-baseleline-mnist-model-ray.py  keras-baseleline-mnist-model.py  keras-model-sequential-invariant.py  keras-model-sequential.py
examples/pytorch/: torch-module.py
examples/scikit-learn/: knn-classifier.py
metalgpy/: __init__.py  __version__.py  _base.py  _decorator.py  _expression.py  _sample.py  _skopt.py
metalgpy/optimizer/: __init__.py  _base_optimizer.py
metalgpy/optimizer/skopt/: __init__.py  callbacks.py  searchcv.py  utils.py
metalgpy/optimizer/skopt/optimizer/: __init__.py  optimizer.py  utils.py
metalgpy/optimizer/skopt/space/: space.py
metalgpy/sampler/: __init__.py  _base_sampler.py  _random_sampler.py  _utils.py
tests/: test_class.py  test_copy.py  test_functional.py  test_hierarchical.py  test_invariant.py  test_memo.py  test_nested.py  test_optimization.py  test_sampler.py  test_var.py
