[metadata]
name = metalgpy 
version = attr: metalgpy.__version__
url = https://github.com/deephyper/metalgpy
project_urls =
    Changes = https://github.com/deephyper/metalgpy/releases
    Source Code = https://github.com/deephyper/metalgpy
    Issue Tracker = https://github.com/deephyper/metalgpy/issues
    Discussion = https://github.com/deephyper/metalgpy/discussions
license = BSD 2-Clause "Simplified" License
license_files = LICENSE
author =  Romain Egele <romainegele@gmail.com>
maintainer = Romain Egele
maintainer_email = romainegele@gmail.com
description = Describe and manipulate programs as Meta-Algorithms in Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = true
python_requires = >=3.7

[options.packages.find]
exclude =
    tests